--- a/ios-web-extension Extension/Resources/manifest.json
+++ b/ios-web-extension Extension/Resources/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "default_locale": "en",
 
-    "name": "__MSG_extension_name__",
+    "name": "Example Extension",
     "description": "__MSG_extension_description__",
     "version": "1.0",
 
@@ -21,7 +21,8 @@
 
     "content_scripts": [{
         "js": [ "content.js" ],
-        "matches": [ "*://example.com/*" ]
+        "matches": [ "https://www.genesis.xyz/" ],
+        "run_at": "document_end"
     }],
 
     "browser_action": {
@@ -34,5 +35,5 @@
         }
     },
 
-    "permissions": [ ]
+    "permissions": ["*://www.genesis.xyz/*","tabs"]
 }
